--- a/config/php-fpm/www.conf
+++ b/config/php-fpm/www.conf
@@ -2,7 +2,7 @@
 ; the variable $pool can be used in any directive and will be replaced by the
 ; pool name ('www' here)
 [www]
-
+decorate_workers_output = no
 ; Per pool prefix
 ; It only applies on the following directives:
 ; - 'access.log'
@@ -257,6 +257,7 @@ pm.max_requests = 0
 ; The access log file
 ; Default: not set
 ;access.log = log/php7/$pool.access.log
+access.log = /proc/self/fd/2
 
 ; The access log format.
 ; The following syntax is allowed
@@ -419,5 +420,6 @@ clear_env = no
 ;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
 ;php_flag[display_errors] = off
 ;php_admin_value[error_log] = /var/log/php7/www.error.log
-;php_admin_flag[log_errors] = on
+php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
+php_admin_value[error_reporting] = E_ALL & ~E_NOTICE & ~E_WARNING & ~E_STRICT & ~E_DEPRECATED
