--- a/config/supervisor/supervisord.conf
+++ b/config/supervisor/supervisord.conf
@@ -28,8 +28,7 @@ autorestart=true
 priority=5
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
+redirect_stderr=true
 
 [program:nginx]
 command=/usr/sbin/nginx -g "daemon off;"
@@ -40,8 +39,15 @@ priority=10
 ;stderr_events_enabled=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
+redirect_stderr=true
+
+[program:cron]
+priority=300
+command=/usr/sbin/crond -f -l 8
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+
 
 # [program:laravel-worker]
 # process_name=%(program_name)s_%(process_num)02d
