--- a/config/php-fpm/www.conf
+++ b/config/php-fpm/www.conf
@@ -321,13 +321,13 @@ access.log = /proc/self/fd/2
 ; The log file for slow requests
 ; Default Value: not set
 ; Note: slowlog is mandatory if request_slowlog_timeout is set
-;slowlog = log/php7/$pool.slow.log
+slowlog = /dev/stdout
 
 ; The timeout for serving a single request after which a PHP backtrace will be
 ; dumped to the 'slowlog' file. A value of '0s' means 'off'.
 ; Available units: s(econds)(default), m(inutes), h(ours), or d(ays)
 ; Default Value: 0
-;request_slowlog_timeout = 0
+request_slowlog_timeout = 30s
 
 ; Depth of slow log stack trace.
 ; Default Value: 20
@@ -338,7 +338,7 @@ access.log = /proc/self/fd/2
 ; does not stop script execution for some reason. A value of '0' means 'off'.
 ; Available units: s(econds)(default), m(inutes), h(ours), or d(ays)
 ; Default Value: 0
-;request_terminate_timeout = 0
+request_terminate_timeout = 10s
 
 ; Set open file descriptor rlimit.
 ; Default Value: system defined value
@@ -418,8 +418,8 @@ clear_env = no
 ; Default Value: nothing is defined by default except the values in php.ini and
 ;                specified at startup with the -d argument
 ;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
-;php_flag[display_errors] = off
-;php_admin_value[error_log] = /var/log/php7/www.error.log
+php_flag[display_errors] = off
+php_admin_value[error_log] = /dev/stdout
 php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
 php_admin_value[error_reporting] = E_ALL & ~E_NOTICE & ~E_WARNING & ~E_STRICT & ~E_DEPRECATED
