--- a/config/supervisor/supervisord.conf
+++ b/config/supervisor/supervisord.conf
@@ -7,7 +7,7 @@ logfile_maxbytes=50MB        ; (max main logfile bytes b4 rotation;default 50MB)
 logfile_backups=10           ; (num of main logfile rotation backups;default 10)
 loglevel=warn                ; (log level;default info; others: debug,warn,trace)
 pidfile=/tmp/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
-nodaemon=false               ; (start in foreground if true;default false)
+nodaemon=true               ; (start in foreground if true;default false)
 minfds=1024                  ; (min. avail startup file descriptors;default 1024)
 minprocs=200                 ; (min. avail process descriptors;default 200)
 user=root            ;
@@ -35,8 +35,8 @@ command=/usr/sbin/nginx -g "daemon off;"
 autostart=true
 autorestart=true
 priority=10
-;stdout_events_enabled=true
-;stderr_events_enabled=true
+stdout_events_enabled=true
+stderr_events_enabled=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 redirect_stderr=true
@@ -44,9 +44,11 @@ redirect_stderr=true
 [program:cron]
 priority=300
 command=/usr/sbin/crond -f -l 8
-redirect_stderr=true
+stdout_events_enabled=true
+stderr_events_enabled=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
+redirect_stderr=true
 
 
 # [program:laravel-worker]
