--- a/config/supervisor/supervisord.conf
+++ b/config/supervisor/supervisord.conf
@@ -51,12 +51,15 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 
-# [program:laravel-worker]
+[program:laravel-worker]
 # process_name=%(program_name)s_%(process_num)02d
-# command=php /var/www/artisan queue:work --sleep=3 --tries=3
-# autostart=true
-# autorestart=true
-# user=forge
-# numprocs=8
-# redirect_stderr=true
-# stdout_logfile=/var/www/storage/logs/worker.log
+command=php /var/www/artisan queue:work --sleep=3 --tries=3
+autostart=true
+autorestart=true
+user=forge
+numprocs=8
+stdout_events_enabled=true
+stderr_events_enabled=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+redirect_stderr=true
