--- a/config/supervisor/supervisord.conf
+++ b/config/supervisor/supervisord.conf
@@ -56,7 +56,7 @@ redirect_stderr=true
 command=php /var/www/artisan queue:work --sleep=3 --tries=3
 autostart=true
 autorestart=true
-user=forge
+# user=forge
 numprocs=8
 stdout_events_enabled=true
 stderr_events_enabled=true
