--- a/config/supervisor/supervisord.conf
+++ b/config/supervisor/supervisord.conf
@@ -52,7 +52,7 @@ redirect_stderr=true
 
 
 [program:laravel-worker]
-# process_name=%(program_name)s_%(process_num)02d
+process_name=%(program_name)s_%(process_num)02d
 command=php /var/www/artisan queue:work --sleep=3 --tries=3
 autostart=true
 autorestart=true
