--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -1,82 +1,32 @@
 worker_processes 1;
-pid /run/nginx/nginx.pid;
+error_log stderr warn;
+pid /run/nginx.pid;
 
 events {
     worker_connections 1024;
-    # multi_accept on;
-    # use epoll;
 }
 
 http {
-    ##
-    # Defaults
-    ##
+    include mime.types;
+    default_type application/octet-stream;
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
-    ##
-    # Basic Settings
-    ##
+    # Define custom log format to include reponse times
+    log_format main_timed '$remote_addr - $remote_user [$time_local] "$request" '
+                          '$status $body_bytes_sent "$http_referer" '
+                          '"$http_user_agent" "$http_x_forwarded_for" '
+                          '$request_time $upstream_response_time $pipe $upstream_cache_status';
 
-    sendfile on;
-    # tcp_nopush on;
-    # tcp_nodelay on;
+    access_log /dev/stdout main_timed;
+    error_log /dev/stderr notice;
 
     keepalive_timeout 65;
-    # keepalive_requests 10000;
 
-    ##
-    # Additional Settings
-    ##
-
-    # types_hash_max_size 2048;
-    # server_tokens off;
-    # disable_symlinks off;
-
-    # client_max_body_size 20m;
-    # client_body_buffer_size 128K;
-    # client_header_buffer_size 1k;
-    # large_client_header_buffers 4 4k;
-    # client_header_timeout  3m;
-    # client_body_timeout    3m;
-    # send_timeout           3m;
-    # output_buffers         1 32k;
-    # postpone_output        1460;
-
-    # open_file_cache max=1000 inactive=20s;
-    # open_file_cache_valid 30s;
-    # open_file_cache_min_uses 5;
-    # open_file_cache_errors off;
-
-    ##
-    # Mime types
-    ##
-
-    include /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-
-    ##
-    # Logging Settings
-    ##
-
-    access_log off;
-    error_log /var/log/nginx/error.log warn;
-
-    ##
-    # Gzip Settings
-    ##
-
-    gzip on;
-    gzip_disable "msie6";
-
-    gzip_vary on;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_buffers 16 8k;
-    gzip_http_version 1.1;
-    gzip_min_length 1000;
-    gzip_types application/x-javascript text/css application/javascript text/javascript text/plain text/xml application/json application/vnd.ms-fontobject application/x-font-opentype application/x-font-truetype application/x-font-ttf application/xml font/eot font/opentype font/otf image/svg+xml image/vnd.microsoft.icon;
+    # Write temporary files to /tmp so they can be created as a non-privileged user
+    client_body_temp_path /tmp/client_temp;
+    proxy_temp_path /tmp/proxy_temp_path;
+    fastcgi_temp_path /tmp/fastcgi_temp;
+    uwsgi_temp_path /tmp/uwsgi_temp;
+    scgi_temp_path /tmp/scgi_temp;
 
     include /etc/nginx/sites-enabled/*;
 }
