--- a/config/supervisor/supervisord.conf
+++ b/config/supervisor/supervisord.conf
@@ -2,10 +2,8 @@
 file=/dev/shm/supervisor.sock   ; (the path to the socket file)
 
 [supervisord]
-logfile=/tmp/supervisord.log ; (main log file;default $CWD/supervisord.log)
-logfile_maxbytes=50MB        ; (max main logfile bytes b4 rotation;default 50MB)
-logfile_backups=10           ; (num of main logfile rotation backups;default 10)
-loglevel=warn                ; (log level;default info; others: debug,warn,trace)
+logfile=/dev/null
+logfile_maxbytes=0             ; (log level;default info; others: debug,warn,trace)
 pidfile=/tmp/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
 nodaemon=true               ; (start in foreground if true;default false)
 minfds=1024                  ; (min. avail startup file descriptors;default 1024)
@@ -22,44 +20,45 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///dev/shm/supervisor.sock ; use a unix:// URL  for a unix socket
 
 [program:php-fpm7]
-command = /usr/sbin/php-fpm7 --nodaemonize --fpm-config /etc/php7/php-fpm.d/www.conf
-autostart=true
-autorestart=true
-priority=5
+command = /usr/sbin/php-fpm7 -F --fpm-config /etc/php7/php-fpm.d/www.conf
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
-redirect_stderr=true
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+autorestart=false
+startretries=0
 
 [program:nginx]
 command=/usr/sbin/nginx -g "daemon off;"
-autostart=true
-autorestart=true
-priority=10
-stdout_events_enabled=true
-stderr_events_enabled=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
-redirect_stderr=true
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+autostart=true
+autorestart=true
+startretries=0
 
 [program:cron]
 priority=300
 command=/usr/sbin/crond -f -l 8
-stdout_events_enabled=true
-stderr_events_enabled=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
-redirect_stderr=true
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+autostart=true
+autorestart=true
+startretries=0
 
 
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
 command=php /var/www/artisan queue:work --sleep=3 --tries=3
-autostart=true
-autorestart=true
 # user=forge
 numprocs=8
-stdout_events_enabled=true
-stderr_events_enabled=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
-redirect_stderr=true
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+autostart=true
+autorestart=true
+startretries=0
