--- a/config/supervisor/supervisord.conf
+++ b/config/supervisor/supervisord.conf
@@ -51,10 +51,8 @@ startretries=0
 
 
 [program:laravel-worker]
-process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/artisan queue:work --sleep=3 --tries=3
+command=php /var/www/artisan queue:listen --tries=3
 # user=forge
-numprocs=8
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
