--- a/config/supervisor/supervisord.conf
+++ b/config/supervisor/supervisord.conf
@@ -51,7 +51,7 @@ startretries=0
 
 
 [program:laravel-worker]
-command=php /var/www/artisan queue:listen --tries=3
+command=php /var/www/artisan queue:work --tries=3
 # user=forge
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
