--- a/config/supervisor/supervisord.conf
+++ b/config/supervisor/supervisord.conf
@@ -51,8 +51,10 @@ startretries=0
 
 
 [program:laravel-worker]
-command=php /var/www/artisan queue:work --tries=3
+process_name=%(program_name)s_%(process_num)02d
+command=php /var/www/artisan queue:work --sleep=3 --tries=3 --daemon
 # user=forge
+numprocs=8
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
