--- a/config/supervisor/supervisord.conf
+++ b/config/supervisor/supervisord.conf
@@ -52,7 +52,7 @@ startretries=0
 
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/artisan queue:work --sleep=3 --timeout=300 --tries=2 --daemon
+command=php /var/www/artisan queue:work --queue=high,low,default --sleep=3 --timeout=300 --tries=2 --daemon
 # user=forge
 numprocs=8
 stdout_logfile=/dev/stdout
