--- a/config/nginx/site.conf
+++ b/config/nginx/site.conf
@@ -22,4 +22,21 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
     }
+
+    server_tokens off;
+
+    # gzip compression settings
+    gzip on;
+    gzip_comp_level 5;
+    gzip_min_length 256;
+    gzip_proxied any;
+    gzip_vary on;
+
+   # browser cache control
+   location ~* \.(ico|css|js|gif|jpeg|jpg|png|woff|ttf|otf|svg|woff2|eot)$ {
+         expires 1d;
+         access_log off;
+         add_header Pragma public;
+         add_header Cache-Control "public, max-age=86400";
+    }
 }
