--- a/config/php-fpm/www.conf
+++ b/config/php-fpm/www.conf
@@ -47,18 +47,11 @@ pm = ondemand
 ; forget to tweak pm.* to fit your needs.
 ; Note: Used when pm is set to 'static', 'dynamic' or 'ondemand'
 ; Note: This value is mandatory.
-pm.max_children = 100
+pm.max_children = 20
+pm.max_requests = 200
 
-; The number of seconds after which an idle process will be killed.
-; Note: Used only when pm is set to 'ondemand'
-; Default Value: 10s
-pm.process_idle_timeout = 10s;
-
-; The number of requests each child process should execute before respawning.
-; This can be useful to work around memory leaks in 3rd party libraries. For
-; endless request processing specify '0'. Equivalent to PHP_FCGI_MAX_REQUESTS.
-; Default Value: 0
-pm.max_requests = 1000
+request_slowlog_timeout = 10s
+request_slowlog_trace_depth = 20
 
 ; Make sure the FPM workers can reach the environment variables for configuration
 clear_env = no
@@ -71,3 +64,7 @@ decorate_workers_output = no
 
 ; Enable ping page to use in healthcheck
 ping.path = /fpm-ping
+
+emergency_restart_threshold = 10
+emergency_restart_interval = 1m
+process_control_timeout = 10s
