--- a/config/php-fpm/www.conf
+++ b/config/php-fpm/www.conf
@@ -36,19 +36,9 @@ listen.mode = 0666
 pm.status_path = /fpm-status
 
 ; Ondemand process manager
-pm = ondemand
-
-; The number of child processes to be created when pm is set to 'static' and the
-; maximum number of child processes when pm is set to 'dynamic' or 'ondemand'.
-; This value sets the limit on the number of simultaneous requests that will be
-; served. Equivalent to the ApacheMaxClients directive with mpm_prefork.
-; Equivalent to the PHP_FCGI_CHILDREN environment variable in the original PHP
-; CGI. The below defaults are based on a server without much resources. Don't
-; forget to tweak pm.* to fit your needs.
-; Note: Used when pm is set to 'static', 'dynamic' or 'ondemand'
-; Note: This value is mandatory.
+pm = static
 pm.max_children = 20
-pm.max_requests = 200
+pm.max_requests = 500
 
 request_slowlog_timeout = 10s
 request_slowlog_trace_depth = 20
@@ -64,7 +54,3 @@ decorate_workers_output = no
 
 ; Enable ping page to use in healthcheck
 ping.path = /fpm-ping
-
-emergency_restart_threshold = 10
-emergency_restart_interval = 1m
-process_control_timeout = 10s
