--- a/config/php-fpm/www.conf
+++ b/config/php-fpm/www.conf
@@ -42,6 +42,7 @@ pm.max_requests = 500
 
 request_slowlog_timeout = 10s
 request_slowlog_trace_depth = 20
+slowlog = /dev/stderr
 
 ; Make sure the FPM workers can reach the environment variables for configuration
 clear_env = no
