--- a/config/supervisor/supervisord.conf
+++ b/config/supervisor/supervisord.conf
@@ -27,6 +27,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autorestart=false
 startretries=0
+stopwaitsecs=300
 
 [program:nginx]
 command=/usr/sbin/nginx -g "daemon off;"
@@ -37,6 +38,7 @@ stderr_logfile_maxbytes=0
 autostart=true
 autorestart=true
 startretries=0
+stopwaitsecs=300
 
 [program:cron]
 priority=300
@@ -48,6 +50,7 @@ stderr_logfile_maxbytes=0
 autostart=true
 autorestart=true
 startretries=0
+stopwaitsecs=300
 
 
 [program:laravel-worker]
@@ -60,5 +63,6 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autostart=true
-autorestart=true
+autorestart=false
 startretries=0
+stopwaitsecs=300
