--- a/config/supervisor/supervisord.conf
+++ b/config/supervisor/supervisord.conf
@@ -55,7 +55,7 @@ stopwaitsecs=300
 
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/artisan queue:work --queue=high,low,default --sleep=3 --timeout=300 --tries=2 --daemon -vvv
+command=php /var/www/artisan rabbitmq:run -vvv
 # user=forge
 numprocs=8
 stdout_logfile=/dev/stdout
