--- a/config/supervisor/rabbitmq.conf
+++ b/config/supervisor/rabbitmq.conf
@@ -66,3 +66,17 @@ autostart=true
 autorestart=true
 startretries=0
 stopwaitsecs=300
+
+[program:laravel-worker-rabbitmq]
+process_name=%(program_name)s_%(process_num)02d
+command=php /var/www/artisan rabbitmq:run fee -vvv
+# user=forge
+numprocs=8
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+autostart=true
+autorestart=true
+startretries=0
+stopwaitsecs=300
