--- a/config/supervisor/rabbitmq.conf
+++ b/config/supervisor/rabbitmq.conf
@@ -67,7 +67,7 @@ autorestart=true
 startretries=0
 stopwaitsecs=300
 
-[program:laravel-worker-rabbitmq]
+[program:laravel-worker-rabbitmq-fee]
 process_name=%(program_name)s_%(process_num)02d
 command=php /var/www/artisan rabbitmq:run fee -vvv
 # user=forge
