--- a/config/supervisor/pos.conf
+++ b/config/supervisor/pos.conf
@@ -52,7 +52,7 @@ autorestart=true
 startretries=0
 stopwaitsecs=300
 
-[program:laravel-worker-rabbitmq-fee]
+[program:laravel-worker-mpos]
 process_name=%(program_name)s_%(process_num)02d
 command=php /var/www/artisan mpos:requery
 # user=forge
