--- a/config/supervisor/biller.conf
+++ b/config/supervisor/biller.conf
@@ -49,7 +49,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autostart=true
 autorestart=true
-startretries=0
+startretries=999999999
 stopwaitsecs=300
 
 [program:laravel-worker-correct]
@@ -63,7 +63,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autostart=true
 autorestart=true
-startretries=0
+startretries=999999999
 stopwaitsecs=300
 
 [program:laravel-worker-reprocess]
@@ -77,7 +77,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autostart=true
 autorestart=true
-startretries=0
+startretries=999999999
 stopwaitsecs=300
 
 [program:laravel-worker-requery]
@@ -91,7 +91,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autostart=true
 autorestart=true
-startretries=0
+startretries=999999999
 stopwaitsecs=300
 
 [program:laravel-worker-biller-get]
@@ -105,5 +105,5 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autostart=true
 autorestart=true
-startretries=0
+startretries=999999999
 stopwaitsecs=300
