--- a/config/supervisor/redis.conf
+++ b/config/supervisor/redis.conf
@@ -49,7 +49,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autostart=true
 autorestart=true
-startretries=0
+startretries=999999999
 stopwaitsecs=300
 
 
@@ -64,5 +64,5 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autostart=true
 autorestart=true
-startretries=0
+startretries=999999999
 stopwaitsecs=300
