--- a/config/supervisor/pos.conf
+++ b/config/supervisor/pos.conf
@@ -49,7 +49,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autostart=true
 autorestart=true
-startretries=0
+startretries=999999999
 stopwaitsecs=300
 
 [program:laravel-worker-mpos]
@@ -63,5 +63,5 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autostart=true
 autorestart=true
-startretries=0
+startretries=999999999
 stopwaitsecs=300
