--- a/config/supervisor/rabbitmq.conf
+++ b/config/supervisor/rabbitmq.conf
@@ -49,7 +49,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autostart=true
 autorestart=true
-startretries=0
+startretries=999999999
 stopwaitsecs=300
 
 
@@ -64,7 +64,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autostart=true
 autorestart=true
-startretries=0
+startretries=999999999
 stopwaitsecs=300
 
 [program:laravel-worker-rabbitmq-fee]
@@ -78,5 +78,5 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autostart=true
 autorestart=true
-startretries=0
+startretries=999999999
 stopwaitsecs=300
