--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -62,6 +62,7 @@ http {
 
     access_log off;
     error_log /var/log/nginx/error.log warn;
+    client_body_buffer_size 100M;
 
     ##
     # Gzip Settings
