--- a/config/supervisor/sbiller.conf
+++ b/config/supervisor/sbiller.conf
@@ -52,53 +52,11 @@ autorestart=true
 startretries=999999999
 stopwaitsecs=300
 
-[program:laravel-worker-correct]
+[program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/artisan bills:correct_reversals
+command=php /var/www/artisan queue:work --daemon --tries=3
 # user=forge
-numprocs=1
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-autostart=true
-autorestart=true
-startretries=999999999
-stopwaitsecs=300
-
-[program:laravel-worker-reprocess]
-process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/artisan bills:reprocess
-# user=forge
-numprocs=1
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-autostart=true
-autorestart=true
-startretries=999999999
-stopwaitsecs=300
-
-[program:laravel-worker-requery]
-process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/artisan transaction:requery
-# user=forge
-numprocs=1
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-autostart=true
-autorestart=true
-startretries=999999999
-stopwaitsecs=300
-
-[program:laravel-worker-biller-get]
-process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/artisan biller:get
-# user=forge
-numprocs=1
+numprocs=8
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
