--- a/config/php-fpm/www.conf
+++ b/config/php-fpm/www.conf
@@ -39,12 +39,15 @@ pm.status_path = /fpm-status
 pm = static
 pm.max_children = 40
 pm.max_requests = 300
+request_terminate_timeout = 300
 
 ; Make sure the FPM workers can reach the environment variables for configuration
 clear_env = no
 
 ; Catch output from PHP
 catch_workers_output = yes
+slowlog = /var/log/php-fpm/php-slow.log
+request_slowlog_timeout = 10s
 
 ; Remove the 'child 10 said into stderr' prefix in the log and only show the actual message
 decorate_workers_output = no
