--- a/config/supervisor/sbiller.conf
+++ b/config/supervisor/sbiller.conf
@@ -54,7 +54,7 @@ stopwaitsecs=300
 
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/artisan queue:work --daemon --tries=3
+command=php /var/www/artisan queue:work --daemon --timeout=0
 # user=forge
 numprocs=8
 stdout_logfile=/dev/stdout
