--- a/config/supervisor/sbiller.conf
+++ b/config/supervisor/sbiller.conf
@@ -54,9 +54,23 @@ stopwaitsecs=300
 
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/artisan queue:work --daemon --timeout=0
+command=php /var/www/artisan queue:work --daemon --timeout=0 --tries=3
 # user=forge
 numprocs=8
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+autostart=true
+autorestart=true
+startretries=999999999
+stopwaitsecs=300
+
+[program:laravel-single-worker]
+process_name=%(program_name)s_%(process_num)02d
+command=php /var/www/artisan queue:work --queue=single --daemon --timeout=0 --tries=1
+# user=forge
+numprocs=1
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
