--- a/config/supervisor/sbiller.conf
+++ b/config/supervisor/sbiller.conf
@@ -79,3 +79,17 @@ autostart=true
 autorestart=true
 startretries=999999999
 stopwaitsecs=300
+
+[program:laravel-dual-worker]
+process_name=%(program_name)s_%(process_num)02d
+command=php /var/www/artisan queue:work --queue=dual --daemon --timeout=0 --tries=1
+# user=forge
+numprocs=2
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+autostart=true
+autorestart=true
+startretries=999999999
+stopwaitsecs=300
