--- a/config/php-fpm/www.conf
+++ b/config/php-fpm/www.conf
@@ -46,7 +46,7 @@ clear_env = no
 
 ; Catch output from PHP
 catch_workers_output = yes
-slowlog = /var/log/php-fpm/php-slow.log
+slowlog = /dev/stderr
 request_slowlog_timeout = 10s
 
 ; Remove the 'child 10 said into stderr' prefix in the log and only show the actual message
