--- a/config/supervisor/swallets.conf
+++ b/config/supervisor/swallets.conf
@@ -55,21 +55,7 @@ stopwaitsecs=300
 
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/artisan queue:work --queue=high,low,default --sleep=3 --timeout=300 --tries=2 --daemon -vvv
-# user=forge
-numprocs=8
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-autostart=true
-autorestart=true
-startretries=999999999
-stopwaitsecs=300
-
-[program:wallet]
-process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/artisan wallet:update_transaction_log
+command=php /var/www/artisan queue:work --queue=default --timeout=0 --tries=3 --daemon -vvv
 # user=forge
 numprocs=8
 stdout_logfile=/dev/stdout
