--- a/config/supervisor/swallets.conf
+++ b/config/supervisor/swallets.conf
@@ -55,9 +55,23 @@ stopwaitsecs=300
 
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/artisan queue:work --queue=default --timeout=0 --tries=3 --daemon -vvv
+command=php /var/www/artisan queue:work --daemon --tries=3 --queue=heavy --timeout=3000
 # user=forge
-numprocs=8
+numprocs=1
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+autostart=true
+autorestart=true
+startretries=999999999
+stopwaitsecs=300
+
+[program:laravel-worker-2]
+process_name=%(program_name)s_%(process_num)02d
+command=php /var/www/artisan queue:work --daemon --tries=4 --queue=default --timeout=120
+# user=forge
+numprocs=1
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
