--- a/config/php/php.ini
+++ b/config/php/php.ini
@@ -1,4 +1,7 @@
-[Date]
+[PHP]
 date.timezone="Africa/Lagos"
 max_execution_time = 150
 memory_limit = 4G
+log_errors=On
+error_reporting=E_ALL & ~E_DEPRECATED & ~E_STRICT
+display_errors=Off
