--- a/config/php-fpm/www.conf
+++ b/config/php-fpm/www.conf
@@ -54,5 +54,5 @@ decorate_workers_output = no
 
 ; Enable ping page to use in healthcheck
 ping.path = /fpm-ping
-
+access.log = /dev/stdout
 access.format='{"time_local":"%{%Y-%m-%dT%H:%M:%S%z}T","client_ip":"%{HTTP_X_FORWARDED_FOR}e","remote_addr":"%R","remote_user":"%u","request":"%m %{REQUEST_URI}e %{SERVER_PROTOCOL}e","status":"%s","body_bytes_sent":"%l","request_time":"%d","http_referrer":"%{HTTP_REFERER}e","http_user_agent":"%{HTTP_USER_AGENT}e","request_id":"%{HTTP_X_REQUEST_ID}e"}'
