--- a/config/supervisor/swallets.conf
+++ b/config/supervisor/swallets.conf
@@ -53,11 +53,11 @@ startretries=999999999
 stopwaitsecs=300
 
 
-[program:laravel-worker]
+[program:baxi_wallet_heavy_queue]
 process_name=%(program_name)s_%(process_num)02d
 command=php /var/www/artisan queue:work --daemon --tries=3 --queue=heavy --timeout=3000
 # user=forge
-numprocs=1
+numprocs=4
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
@@ -67,11 +67,11 @@ autorestart=true
 startretries=999999999
 stopwaitsecs=300
 
-[program:laravel-worker-2]
+[program:baxi_wallet_queue]
 process_name=%(program_name)s_%(process_num)02d
 command=php /var/www/artisan queue:work --daemon --tries=4 --queue=default --timeout=120
 # user=forge
-numprocs=1
+numprocs=2
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
